<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <GVL Name="Notifications" Id="{d9732bb1-bbf5-0bfc-0bca-6e73d78566df}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
    
    // Global notification objects...
    Notification_OnUserLoggedIn  : T_Notification;
    Notification_OnUserLoggedOut : T_Notification;

END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>